added some html to practice dom manipulation

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="jslearn.js"></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Rock Paper Scissors Game!</h1>
+    <div id="humanText"></div>
+    <p>What's your move? CLICK Rock Paper or Scissors!</p>
+
+    <div id="buttonscontainer">
+        <button id="rock">👊</button>
+        <button id="paper">🫱</button>
+        <button id = "scissors">✂️</button>
+    </div>
+    
+
+
     
 </body>
 </html>
